# DICOM-server

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/rules/: architecture.md  conventions.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: dicom.py  health.py  presign.py  studies.py  uploads.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/db/: base.py  session.py
app/db/models/: __init__.py  annotation.py  audit_log.py  instance.py  patient.py  series.py  share.py  study.py  upload_job.py  user.py  user_session.py
app/middleware/: request_id.py
app/schemas/: common.py  dicom.py  studies.py  uploads.py
app/services/: ingestion_service.py  storage_service.py  study_service.py  upload_service.py
app/workers/: celery_app.py
app/workers/tasks/: __init__.py  ingest.py
scripts/: minio-init.sh
tests/: conftest.py  test_health.py
